src/test/resources/tests/28_error_not_boolean.expected
Runtime error: Runtime Error at line 2:6: Logical AND requires boolean operands. Got number and number
