src/test/resources/tests/28_error_not_boolean.tee
// Test: Logical AND with non-boolean should error
PRINT(1 and 2)
